--- a/1 - Starter files/includes/timeline.css
+++ b/1 - Starter files/includes/timeline.css
@@ -1,4 +1,170 @@
 /*  CSS Document                             */
+body {
+  margin: 0;
+  padding: 0;
+  font-size: 16px;
+  font-family: Arial, Helvetica, sans-serif;
+}
 
+.timeline {
+  position: relative;
+  margin: 30px 0px 20px 0px;
+}
 
+.timeline h1 {
+  position: absolute;
+  top: 10px;
+  left: 0px;
+  text-align: center;
+  width: 100%;
+  margin: 0px;
+  border-bottom: 1px solid rgba(255, 255, 255, 0.2);
+  font-size: 1.2em;
+  z-index: 1;
+  text-transform: uppercase;
+  color: #ffffff;
+  padding-bottom: 10px;
+  letter-spacing: 2px;
+}
 
+.timeline .panel_container {
+  overflow: hidden;
+  position: relative;
+  margin: 10px 0px 0px 0px;
+  width: 100%;
+  height: 300px;
+  /* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#26016a+48,d14001+48 */
+  background: #26016a; /* Old browsers */
+  background: -moz-linear-gradient(
+    left,
+    #26016a 48%,
+    #d14001 48%
+  ); /* FF3.6-15 */
+  background: -webkit-linear-gradient(
+    left,
+    #26016a 48%,
+    #d14001 48%
+  ); /* Chrome10-25,Safari5.1-6 */
+  background: linear-gradient(
+    to right,
+    #26016a 48%,
+    #d14001 48%
+  ); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#26016a', endColorstr='#d14001',GradientType=1 ); /* IE6-9 */
+}
+
+.timeline .background_slider {
+  position: absolute;
+  width: inherit;
+  height: inherit;
+}
+
+.timeline .background_slider img {
+  position: absolute;
+  top: 0px;
+  left: 0px;
+}
+
+.timeline .panel_slider {
+  width: 100%;
+  position: absolute;
+}
+
+.timeline .panel {
+  width: 340px;
+  position: absolute;
+}
+
+.timeline .panel_content {
+  padding: 75px 10px 0px 40px;
+  position: relative;
+}
+
+.timeline .panel_content h2 {
+  font-size: 1em;
+  color: #ffffff;
+  margin: 0px 0px 8px 0px;
+}
+
+.timeline .panel_content p {
+  margin: 0px 0px 1em 0px;
+  position: relative;
+  color: rgba(255, 255, 255, 0.55);
+}
+
+.timeline .panel_content .label {
+  position: absolute;
+  top: 12px;
+  right: 0px;
+  font-size: 4em;
+  color: rgba(255, 255, 255, 0.2);
+  text-align: right;
+  font-family: Georgia, "Times New Roman", Times, serif;
+}
+
+.timeline nav {
+  position: absolute;
+  bottom: 0px;
+  left: 0px;
+  text-align: center;
+  width: inherit;
+}
+
+.timeline nav a {
+  color: #ffffff;
+  font-size: 0.9em;
+  display: inline-block;
+  padding: 5px 10px;
+  border-color: #ffffff;
+  border-style: solid;
+  border-left-width: 5px;
+  border-right-width: 5px;
+  border-bottom-width: 0px;
+  border-top-width: 8px;
+  text-decoration: none;
+}
+
+.timeline nav a:first-child {
+  border-left-width: 8px;
+}
+
+.timeline nav a:last-child {
+  border-right-width: 8px;
+}
+
+.timeline nav a.selected {
+  background-color: rgba(255, 255, 255, 0.55);
+}
+
+.timeline .panel img.arpnet {
+  margin: 0px 0px 10px 0px;
+}
+
+.timeline .panel img.tcp {
+  float: left;
+  margin: 10px 20px 0px 0px;
+}
+
+.timeline .panel img.tcp_ip {
+  float: left;
+  margin-right: 20px;
+}
+
+.timeline .panel img.www {
+  float: left;
+  margin: 10px 15px 0px 0px;
+}
+
+.timeline .panel img.voip {
+  float: right;
+  margin: 10px 0px 0px 10px;
+}
+
+.timeline .panel img.telecommunications_usage {
+  float: right;
+  margin: 10px 30px 0px 10px;
+}
+
+.clear_both {
+  clear: both;
+}
